# BrainForge

./: .dockerignore  .env.example  .env.security.example  .env.test  .gitignore  .roomodes  AGENTS.md  Dockerfile  INTEGRATION_REVIEW.md  LICENSE  QUALITY_SECURITY_REVIEW_UPDATED.md  README.md  REVIEW_CLEANUP_SUMMARY.md  REVIEW_SUMMARY.md  SECURITY_QUALITY_REPORT.md  agents.md  alembic.ini  coverage.xml  create_brainforge_database.py  docker-compose.yml  mcp_test_results.json  mcp_tools_test_results.json  opencode.json  package-lock.json  pyproject.toml  requirements.txt  test_crud_operations.py  test_database_connection.py  test_mcp_tools.py  test_mcp_tools_corrected.py  test_mcp_tools_fastmcp.py  test_mcp_tools_protocol.py  test_mcp_tools_sse.py  test_security_auth.py  test_workflow_integration.py  test_workflow_integration_final.py  test_workflow_tools_functionality.py
.beads/: interactions.jsonl
.github/workflows/: ci.yml
.roo/: mcp.json
.roo/rules/: specify-rules.md
.roo/rules-python-developer/: 1_workflow.xml  2_best_practices.xml  3_common_patterns.xml  4_tool_usage.xml  5_examples.xml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_pdf_processing.py  003_researcher_agent.py  004_mcp_library.py  83aef568935a_add_user_authentication_tables.py  __init__.py
archive/reviews/: AGENTS.md  CONTRIBUTING.md  CRITICAL_ISSUES_RESOLUTION_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUALITY_SECURITY_REVIEW.md  README.md  REMEDIATION_ACTION_PLAN.md  REMEDIATION_ACTION_PLAN_UPDATED.md  workflow_integration_test_report.md
config/: __init__.py  api_keys.env.template  database.env  researcher_agent.env  researcher_agent.yaml
specs/: GOVERNANCE.md  gap-analysis-report.md  spec-audit-report.md  traceability-maintenance-guide.md  traceability-matrix.md
specs/001-semantic-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-semantic-search/checklists/: requirements.md
specs/001-semantic-search/contracts/: openapi.yaml
specs/002-ingestion-curation/: spec.md  tasks.md
specs/002-ingestion-curation/checklists/: requirements.md
specs/003-researcher-agent/: spec.md
specs/003-researcher-agent/checklists/: requirements.md
specs/004-library-mcp/: constitutional-compliance.md  contracts.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fact-checker/: spec.md
specs/006-vault-sync-conflict-resolution/: api-contract.md  data-model.md  implementation-roadmap.md  spec.md  test-strategy.md
specs/1-ai-knowledge-base/: spec.md
specs/master/: data-model.md  phased-roadmap.md  plan.md  quickstart.md  research.md  tasks.md
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/cli/: __init__.py  backup.py  migrate.py  obsidian.py
src/compliance/: __init__.py  constitution.py
src/config/: database.py  llm.py  llm_config.py  production.py
src/mcp/: __init__.py  main.py  server.py
src/models/: __init__.py  agent_run.py  audit_trail.py  base.py  content_source.py  embedding.py  ingestion.py  integration_proposal.py  link.py  mcp_execution.py  mcp_session.py  mcp_tool.py  mcp_workflow.py  note.py  pdf_metadata.py  pdf_processing_result.py  processing_result.py  quality_assessment.py  research_audit_trail.py  research_review_queue.py  research_run.py  review_queue.py  role.py  search.py  user.py  version_history.py
src/services/: __init__.py  auth.py  base.py  caching.py  content_discovery_service.py  database.py  embedding_generator.py  encryption.py  generic_database_service.py  hnsw_index.py  ingestion_service.py  integration_proposal_service.py  monitoring.py  obsidian.py  pdf_processor.py  quality_assessment_service.py  rbac.py  research_orchestrator.py  research_run_service.py  review_processor.py  review_queue_service.py  semantic_search.py  sqlalchemy_service.py  sync.py  vector_store.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_integration.py  test_llm_abstraction.py  test_llm_providers.py  test_migrations.py  test_models.py  test_obsidian.py  test_obsidian_simple.py  test_real_spiffworkflow_integration.py  test_utils.py
tests/contract/: test_quality.py  test_research.py  test_review.py  test_semantic_search.py
tests/integration/: test_note_workflow.py  test_pdf_ingestion.py  test_security.py  test_semantic_search.py  test_semantic_search_integration.py
tests/performance/: test_semantic_performance.py
tests/unit/: test_auth.py  test_mcp_tools.py  test_note_service.py  test_pdf_processor.py  test_semantic_search_unit.py
(+64 files in other folders)
